hphp/hack/test/typecheck/assign_key_refinement_soundness.php.exp
File "assign_key_refinement_soundness.php", line 7, characters 26-30:
You are trying to access an element of this container but the container could be `null`.  (Typing[4063])
  File "assign_key_refinement_soundness.php", line 6, characters 27-30:
  This is what makes me believe it can be `null`.
